force-app/main/default/objects/tspa__VRA_logs__c/fields/tspa__Affected_Id__c.field-meta.xml
<CustomField>
    <fullName>tspa__Affected_Id__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Affected Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>