force-app/main/default/objects/tspa__VRA_logs__c/fields/tspa__Class_Method__c.field-meta.xml
<CustomField>
    <fullName>tspa__Class_Method__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Class Method</label>
    <length>250</length>
    <type>Text</type>
</CustomField>