force-app/main/default/objects/tspa__VRA_logs__c/fields/tspa__Logging_Level__c.field-meta.xml
<CustomField>
    <fullName>tspa__Logging_Level__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Logging Level</label>
    <length>10</length>
    <type>Text</type>
</CustomField>